<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btn_show_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_date_picker"/>
    <Button
        android:id="@+id/btn_show_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_time_picker"/>
    <Button
        android:id="@+id/btn_show_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_alertdialog"/>
    <Button
        android:id="@+id/btn_show_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_customdialog"/>
    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spinnerProvinces"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="calendar"/>
    <TimePicker
        android:id="@+id/timePicker"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>